--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Dec. 7th</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
