--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -1,11 +1,16 @@
+{% comment %}
 {% assign curricula = "swc-gapminder|swc-inflammation"  | split: "|" %}
 {% unless curricula contains site.curriculum %}
 {% include warning-curriculum.html %}
 {% endunless %}
+{% endcomment %}
 
+{% include install_instructions/agave.html %}
+{% comment %}
 {% include install_instructions/shell.html %}
 {% include install_instructions/git.html %}
 {% include install_instructions/editor.html %}
+{% endcomment %}
 
 {% comment %}
 {% if site.flavor == "r" %}
