--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -6,17 +6,17 @@
       <tr> <td>09:00</td>  <td>
         <a href="https://jyalim.github.io/agave-shell-novice/setup.html">Setup</a>,
         <a href="https://jyalim.github.io/agave-shell-novice/01-intro/index.html">intro</a>,
-        <a href="https://jyalim.github.io/agave-shell-novice/02-filedir/index.html">filesystem nav.</a>,
+        <a href="https://jyalim.github.io/agave-shell-novice/02-filedir/index.html">filesystem nav.</a>
       </td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>
-        <a href="https://jyalim.github.io/agave-shell-novice/03-create/index.html">creating files</a>,
+        <a href="https://jyalim.github.io/agave-shell-novice/03-create/index.html">Creating files</a>,
         <a href="https://jyalim.github.io/agave-shell-novice/04-pipefilter/index.html">pipes and filters</a>,
-        <a href="https://jyalim.github.io/agave-shell-novice/05-loop/index.html">loops</a>,
+        <a href="https://jyalim.github.io/agave-shell-novice/05-loop/index.html">loops</a>
         </td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:20</td>  <td>
-        <a href="https://jyalim.github.io/agave-shell-novice/06-script/index.html">scripts</a>,
+        <a href="https://jyalim.github.io/agave-shell-novice/06-script/index.html">Scripts</a>,
         <a href="https://jyalim.github.io/agave-shell-novice/07-find/index.html">queries</a>,
         <a href="https://jyalim.github.io/agave-shell-novice/08-slurm/index.html">scheduler</a>.
         </td> </tr>
